<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Quiz App - Digital Forensics</string>
    <string name="q1">1. The files in a file system have mandatory attributes like: size and name(s), and non-essential metadata like modification date/time, creation date/time, (last) access date/time</string>
    <string name="a1_1">true</string>
    <string name="a1_2">false</string>
    <string name="q2">2. The file that keeps track of all files on an NTFS file system has the name</string>
    <string name="hint_q2">The answer starts with $</string>
    <string name="a2_1">$MFT</string>
    <string name="q3">3. The modification date/time, creation date/time, access date/time when copying/moving a file from a file system to another depends on the following factors:</string>
    <string name="a3_1">whether the computer is in hibernation</string>
    <string name="a3_2">the source file system</string>
    <string name="a3_3">the destination file system</string>
    <string name="a3_4">the operation (copy or move)</string>
    <string name="q4">4. The file signature of a DOCX file is</string>
    <string name="a4_1">identical to the one of a ZIP file</string>
    <string name="a4_2">PK!</string>
    <string name="a4_3">D0CF11E0</string>
    <string name="a4_4">BMP</string>
    <string name="q5">5. Starting with which version of Windows, implicitly, the last access date/time is not updated on NTFS</string>
    <string name="a5_1">Windows 98</string>
    <string name="a5_2">Windows XP</string>
    <string name="a5_3">Windows Vista</string>
    <string name="a5_4">Windows 7</string>
    <string name="a5_5">Windows NT 4.0</string>
    <string name="a5_6">Windows 2000</string>
    <string name="q6">6. Rockridge ISO file system extension is used for CDs to allow the following feature:</string>
    <string name="a6_1">user rights</string>
    <string name="a6_2">long file names</string>
    <string name="a6_3">better granularity for creation date/time</string>
    <string name="q7">7. A 32bit CPU/Operating system without PAE (Physical Address Extension) allows the programs access less than</string>
    <string name="a7_1">16MB of RAM</string>
    <string name="a7_2">4MB of RAM</string>
    <string name="a7_3">32GB of RAM</string>
    <string name="a7_4">4GB of RAM</string>
    <string name="q8">8. The master boot record has the last bytes (signature):</string>
    <string name="a8_1">55AA</string>
    <string name="a8_2">MSFT</string>
    <string name="a8_3">1234</string>
    <string name="a8_4">1010</string>
    <string name="q9">9. Two different files (containing different data) can have the same MD5 signature</string>
    <string name="a9_1">false</string>
    <string name="a9_2">true because they reside in different folders</string>
    <string name="a9_3">true because collision can happen</string>
    <string name="a9_4">true because the MD5 is a bijective function</string>
    <string name="a9_5">false because it\'s impossible to generate two or more different files having different content, yet producing the same MD5 checksum</string>
    <string name="q10">10. A file that has become too large to be kept as a resident in an MFT record can be made resident again by truncating the file to a certain number of bytes.</string>
    <string name="a10_1">true</string>
    <string name="a10_2">false</string>
    <string name="r0">Someone is displeased with your apparent lack of progress!</string>
    <string name="r1">You have failed me for the last time.</string>
    <string name="r2">Be careful not to choke on your aspirations!</string>
    <string name="r3">Don\'t be too proud!</string>
    <string name="r4">I am altering the deal!</string>
    <string name="r5">I am the master!</string>
    <string name="r6">I find your lack of faith disturbing!</string>
    <string name="r7">Join me!</string>
    <string name="r8">Impressive, most impressive!</string>
    <string name="r9">I am your father!</string>
    <string name="r10">You already have!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unanswered_questions">You have unanswered question</string>
    <string name="are_you_sure_submit">Are you sure you want to submit?</string>
    <string name="score0">Someone is displeased with your apparent lack of progress!</string>
    <string name="score1">You have failed me for the last time!</string>
    <string name="score2">Be careful not to choke on your aspirations!</string>
    <string name="score3">Don\'t be too proud!</string>
    <string name="score4">I am altering the deal!</string>
    <string name="score5">I am the master!</string>
    <string name="score6">I find your lack of faith disturbing!</string>
    <string name="score7">I am your father!</string>
    <string name="score8">Join me!</string>
    <string name="score9">Impressive, most impressive!</string>
    <string name="score10">Let me see you with my own eyes!</string>
    <string name="pass"><xliff:g id="value" example="2">%d</xliff:g> questions answered correctly out of 10\nResult: It\'s a pass!</string>
    <string name="fail"><xliff:g id="value" example="2">%d</xliff:g> questions answered correctly out of 10\nResult: Failed!</string>
    <string name="mft">$MFT</string>
    <string name="rules">Rules for the test:</string>
    <string name="description">Do not press the submit button until you have answered all the questions.\nThe test consists of 10 questions.\nEvery question is worth 1 point.\nIn order to pass, one should obtain 7 or more points.\nEach question has a correct answer, if you do not answer a question, you get zero points for that question.\nAny question which uses radio buttons allows only one answer.\nThere are questions that have multiple answers, those are marked by checkboxes. In that case: answering a wrong answer, will not get you the point; answering only some (not all) of the correct answers will not get you partial points.\nThere is a question where you have to type in the response.\n\nMay the Force be with you!</string>
</resources>
